--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Garanta uma vida longa e cheia de alegria para o seu melhor amigo">
     <title>PetLife</title>
+    <meta name="description" content="Garanta uma vida longa e cheia de alegria para o seu melhor amigo">
+    <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <!-- Cabeçalho -->
     <header>
-        <a href="index.html">
-            <img src="./img/logo.svg" alt="PetLife">
+        <a href="/">
+            <img src="./img/logo-white.svg" alt="PetLife">
         </a>
 
         <nav>
@@ -21,27 +26,29 @@
             <a href="#duvidas">Dúvidas</a>
         </nav>
     </header>
-
+    <!-- Conteúdo da página -->
     <main>
+        <!-- Seção inicial -->
         <section id="inicio">
-            <img src="./img/start-img.svg" alt="Imagem principal" width="580" height="580">
-
+            <img src="./img/start-img.svg" alt="" width="580" height="580">
             <div>
-                <h1>
-                    Garanta uma vida longa e cheia de alegria para o seu melhor amigo
-                </h1>
-                <p>
+                <h1>Garanta uma vida longa e cheia de alegria para o seu melhor amigo</h1>
+                <p class="paragrafo">
                     A PetLife é o seu refúgio de confiança para o cuidado completo do seu pet. Com profissionais dedicados e serviços abrangentes, oferecemos uma experiência acolhedora e personalizada, garantindo o bem-estar, a saúde e a felicidade dos seus animais de estimação.
                 </p>
-                <a href="https://wa.me/5511954213695" target="_blank">Marque uma consulta</a>
-                <a href="#clinica">Conheça nossa clínica</a>
+                <a href="https://github.com/isaacpontes" target="_blank" class="button">Marque uma consulta</a>
+                <a href="#clinica" class="button-transparent">Conheça nossa clínica</a>
             </div>
+            <img src="./img/shape.svg" alt="" class="absolute">
         </section>
-
+        <!-- Seção da clínica -->
         <section id="clinica">
             <div>
                 <h2>Cuidado Veterinário de Qualidade</h2>
-                <p>Nossa clínica veterinária é o local onde a paixão pelos animais se une à excelência em cuidados veterinários. Sob a liderança da Dra. Vivien Reid, uma profissional altamente qualificada e comprometida, oferecemos serviços de saúde e bem-estar para animais de estimação de todas as espécies. Venha conhecer nossa clínica e desfrute da atenção personalizada e do carinho que seu pet merece.
+                <p class="paragrafo">
+                    Nossa clínica veterinária é o local onde a paixão pelos animais se une à excelência em cuidados veterinários.
+                    Sob a liderança da Dra. Vivien Reid, uma profissional altamente qualificada e comprometida, oferecemos serviços de saúde e bem-estar para animais de estimação de todas as espécies. Venha conhecer nossa clínica e desfrute da
+                    atenção personalizada e do carinho que seu pet merece.
                 </p>
                 <ul>
                     <li>Consultas de rotina e exames de saúde abrangentes</li>
@@ -54,69 +61,84 @@
                 </ul>
             </div>
             <img src="./img/clinic-img.svg" alt="" width="480" height="480" loading="lazy">
-
-            <section id="farmacia">
-                <h2>Venha conferir o nosso petshop e farmácia</h2>
-                <img src="./img/shop-img.svg" alt="" width="645" height="430" loading="lazy">
-                <p>
-                    Além de ser uma clínica veterinária de confiança, também contamos com um completo petshop e farmácia. Nosso petshop oferece uma ampla seleção de produtos de alta qualidade, desde alimentos balanceados e petiscos deliciosos até brinquedos divertidos e acessórios elegantes para o seu pet. Na nossa farmácia, você encontrará uma variedade de medicamentos, produtos de cuidados e suplementos recomendados pelos nossos veterinários, garantindo que o bem-estar e a saúde do seu amado pet
-                    estejam sempre em boas mãos. Tudo o que você precisa para cuidar e mimar o seu pet está aqui, no nosso petshop e farmácia, com a mesma dedicação e qualidade que nos tornou referência na área veterinária.</p>
-
-            </section>
-
-            <section id="duvidas">
-                <img src="./img/faq-img.svg" alt="" width="540" height="540" loading="lazy">
-                <div>
-                    <h2>Ficou alguma dúvida?</h2>
-                    <h3>Quais serviços são oferecidos pela clínica PetLife?</h3>
+        </section>
+        <!-- Seção farmácia/petshop -->
+        <section id="farmacia">
+            <h2>Venha conferir o nosso petshop e farmácia</h2>
+            <img src="./img/shop-img.svg" alt="" width="645" height="430" loading="lazy">
+            <p class="paragrafo">
+                Além de ser uma clínica veterinária de confiança, também contamos com um completo petshop e farmácia. Nosso petshop oferece uma ampla seleção de produtos de alta qualidade, desde alimentos balanceados e petiscos deliciosos até brinquedos divertidos e acessórios elegantes para o seu pet. Na nossa farmácia, você encontrará
+                uma variedade de medicamentos, produtos de cuidados e suplementos recomendados pelos nossos
+                veterinários, garantindo que o bem-estar e a saúde do seu amado pet estejam sempre em boas mãos. Tudo o que você precisa para cuidar e mimar o seu pet está aqui, no nosso petshop e farmácia, com a mesma dedicação e qualidade que nos tornou referência na área veterinária.
+            </p>
+        </section>
+        <!-- Seção de perguntas frequentes -->
+        <section id="duvidas">
+            <img src="./img/faq-img.svg" alt="" width="540" height="540" loading="lazy">
+            <div>
+                <h2>Ficou alguma dúvida?</h2>
+                <div class="duvida">
+                    <strong>Quais serviços são oferecidos pela clínica da PetLife?</strong>
                     <img src="./img/arrow-down.svg" alt="">
-                    <p>A clínica da PetLife oferece uma ampla gama de serviços, incluindo consultas de rotina, vacinação, cirurgias, tratamento de doenças, cuidados odontológicos, atendimento de emergência 24 horas, programas de prevenção de pulgas, carrapatos e vermes, entre outros. Nosso objetivo é fornecer cuidados abrangentes e personalizados para garantir a saúde e o bem-estar do seu pet.</p>
+                    <p class="paragrafo">
+                        A clínica da PetLife oferece uma ampla gama de serviços, incluindo consultas de rotina, vacinação, cirurgias,
+                        tratamento de doenças, cuidados odontológicos, atendimento de emergência 24 horas, programas de prevenção de pulgas, carrapatos e vermes, entre outros. Nosso objetivo é fornecer cuidados abrangentes e personalizados
+                        para garantir a saúde e o bem-estar do seu pet.
+                    </p>
                 </div>
-                <div>
-                    <h3>Quais espécies de animais a clínica veterinária atende?</h3>
+                <div class="duvida">
+                    <strong>Quais espécies de animais a clínica veterinária atende?</strong>
                     <img src="./img/arrow-down.svg" alt="">
-                    <p>A clínica veterinária da PetLife atende animais de estimação de todas as espécies, incluindo cães, gatos, pássaros, roedores e répteis. Nossos profissionais possuem conhecimento e experiência para cuidar de diferentes tipos de animais, oferecendo um atendimento especializado e dedicado a cada um deles.</p>
+                    <p class="paragrafo">
+                        A clínica veterinária da PetLife atende animais de estimação de todas as espécies, incluindo cães, gatos, pássaros, roedores e répteis. Nossos profissionais possuem conhecimento e experiência para cuidar de
+                        diferentes tipos de animais, oferecendo um atendimento especializado e dedicado a cada um deles.
+                    </p>
                 </div>
-                <div>
-                    <h3>A clínica veterinária da PetLife possui serviços de emergência?</h3>
+                <div class="duvida">
+                    <strong>A clínica da PetLife possui serviços de emergência?</strong>
                     <img src="./img/arrow-down.svg" alt="">
-                    <p>Sim, a clínica veterinária da PetLife oferece serviços de emergência 24 horas. Se o seu animal de estimação precisar de atendimento veterinário imediato fora do horário de expediente, nossa equipe está pronta para ajudar, fornecendo cuidados urgentes e tratamento adequado para garantir o bem-estar do seu pet.</p>
+                    <p class="paragrafo">
+                        Sim, a clínica veterinária da PetLife oferece serviços de emergência 24 horas. Se o seu animal de estimação precisar de atendimento veterinário imediato fora do horário de expediente, nossa equipe está pronta para
+                        ajudar, fornecendo cuidados urgentes e tratamento adequado para garantir o bem-estar do seu pet.
+                    </p>
                 </div>
-                <div>
-                    <h3>A clínica oferece serviços de banho e tosa?</h3>
+                <div class="duvida">
+                    <strong>A clínica oferece serviços de banho e tosa?</strong>
                     <img src="./img/arrow-down.svg" alt="">
-                    <p>Sim, a clínica veterinária da PetLife oferece serviços profissionais de banho e tosa. Nossa equipe de profissionais experientes garante que seu pet receba cuidados adequados, usando produtos de alta qualidade e técnicas seguras. O banho e tosa ajudam a manter a higiene, a saúde da pele e pelagem do seu pet, além de
-                    proporcionar uma experiência relaxante e agradável para eles.</p>
+                    <p class="paragrafo">
+                        Sim, a clínica veterinária da PetLife oferece serviços profissionais de banho e tosa. Nossa equipe deprofissionais experientes garante que seu pet receba cuidados adequados, usando produtos de alta qualidade e
+                        técnicas seguras. O banho e tosa ajudam a manter a higiene, a saúde da pele e pelagem do seupet, além de
+                        proporcionar uma experiência relaxante e agradável para eles.
+                    </p>
                 </div>
-            </section>
+            </div>
+        </section>
     </main>
-
     <footer>
-        <div>
-            <a href="index.html">
-                <img src="./img/logo.svg" alt="PetLife">
-            </a>
-                <p>Cuidando com amor, vivendo com alegria: PetLife, onde a vida dos pets é mais feliz!
-                </p>
+        <div class="col-1">
+            <img src="./img/logo.svg" alt="PetLife">
+            <p>Cuidando com amor, vivendo com alegria: PetLife, onde a vida dos pets é mais feliz!</p>
         </div>
-
-        <div>
-            <strong>Links Rápidos</strong>
-                <nav>
-                    <a href="#inicio">Início</a>
-                    <a href="#clinica">Clínica</a>
-                    <a href="#farmacia">Farmácia</a>
-                    <a href="#duvidas">Dúvidas</a>
-                </nav>
+        <div class="col-2">
+            <p class="titulo">Links rápidos</p>
+            <a href="#inicio">Início</a>
+            <a href="#clinica">Clínica</a>
+            <a href="#farmacia">Farmácia</a>
+            <a href="#duvidas">Dúvidas</a>
         </div>
-            <strong>Encontre-nos</strong>
-                <p> WhatsApp: <a href="https://wa.me/5511954213695" target="_blank">(11) 95421-3695</a>
-                </p>
-                <p>Email: <a href="mailto:" target="_blank">contato@petlife.com.br</a></p>
-                <p>Endereço: Av. 7 de Setembro, nº 42, Centro</p>
+        <div class="col-3">
+            <p class="titulo">Encontre-nos</p>
+            <p>WhatsApp: (11) 95785-1646</p>
+            <p>Email: contato@petlife.com.br</p>
+            <p>Endereço: Av. 7 de Setembro, nº 42, Centro</p>
+        </div>
     </footer>
-    <div>
-        Desenvolvido por <a href="https://www.linkedin.com/in/igorlofreitas/" target="_blank">@igorlofreitas</a>
+    <div class="copyright">
+        Desenvolvido por <a href="https://github.com/isaacpontes" target="_blank">@igorfreitas</a> na trilha Start na
+        Programação 🤘 da OneBitCode.
     </div>
+
+    <script src="index.js"></script>
 </body>
+
 </html>
