--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-    <!-- Cabeçalho -->
     <header>
         <a href="/">
             <img src="./img/logo-white.svg" alt="PetLife">
@@ -26,9 +25,7 @@
             <a href="#duvidas">Dúvidas</a>
         </nav>
     </header>
-    <!-- Conteúdo da página -->
     <main>
-        <!-- Seção inicial -->
         <section id="inicio">
             <img src="./img/start-img.svg" alt="" width="580" height="580">
             <div>
@@ -36,12 +33,11 @@
                 <p class="paragrafo">
                     A PetLife é o seu refúgio de confiança para o cuidado completo do seu pet. Com profissionais dedicados e serviços abrangentes, oferecemos uma experiência acolhedora e personalizada, garantindo o bem-estar, a saúde e a felicidade dos seus animais de estimação.
                 </p>
-                <a href="https://github.com/isaacpontes" target="_blank" class="button">Marque uma consulta</a>
+                <a href="https://github.com/igorlofreitas" target="_blank" class="button">Marque uma consulta</a>
                 <a href="#clinica" class="button-transparent">Conheça nossa clínica</a>
             </div>
             <img src="./img/shape.svg" alt="" class="absolute">
         </section>
-        <!-- Seção da clínica -->
         <section id="clinica">
             <div>
                 <h2>Cuidado Veterinário de Qualidade</h2>
@@ -62,7 +58,6 @@
             </div>
             <img src="./img/clinic-img.svg" alt="" width="480" height="480" loading="lazy">
         </section>
-        <!-- Seção farmácia/petshop -->
         <section id="farmacia">
             <h2>Venha conferir o nosso petshop e farmácia</h2>
             <img src="./img/shop-img.svg" alt="" width="645" height="430" loading="lazy">
@@ -72,7 +67,6 @@
                 veterinários, garantindo que o bem-estar e a saúde do seu amado pet estejam sempre em boas mãos. Tudo o que você precisa para cuidar e mimar o seu pet está aqui, no nosso petshop e farmácia, com a mesma dedicação e qualidade que nos tornou referência na área veterinária.
             </p>
         </section>
-        <!-- Seção de perguntas frequentes -->
         <section id="duvidas">
             <img src="./img/faq-img.svg" alt="" width="540" height="540" loading="lazy">
             <div>
